--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id 'java-library'
 }
 
+apply plugin: 'java'
+apply plugin: 'maven'
+
 version = '1.0.0'
 group = 'com.github.zi_jing.cuckoogradle'
 
@@ -27,3 +30,22 @@ repositories {
 tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
 }
+
+uploadArchives {
+	repositories {
+		mavenDeployer {
+			if(project.hasProperty('localMvnPath')) {
+				pom.groupId = project.group
+				pom.artifactId = 'CuckooGradle'
+				pom.version = project.version
+				repository(url: uri(project.properties.localMvnPath))
+			}
+		}
+	}
+}
+
+jar {
+	from sourceSets.main.output
+	from sourceSets.main.allSource
+}
+
