--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ version = '1.0.0'
 group = 'com.github.zi_jing.cuckoogradle'
 
 dependencies {
-    implementation gradleApi()
-    implementation localGroovy()
+    compile gradleApi()
+    compile localGroovy()
 }
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
